# elowbatt

./: .gitignore  Makefile.am  configure.ac
data/: Makefile.am  elowbatt.ini
debian/: changelog  control  copyright  rules
po/: Makefile.am  POTFILES  be.po  bg.po  bn_IN.po  ca.po  cs.po  de.po  elowbatt.pot  es.po  eshutdown.pot  fr.po  hu.po  it.po  ja.po  lv.po  nl.po  pl.po  ru.po  sv.po  uk.po  zh_CN.po
scripts/: 55elowbatt  Makefile.am  elowbatt  elowbatt.sh
src/: Makefile.am  elowbatt.c
themes/: Makefile.am  elowbatt.edc  elowbatt.edj
